force-app/main/default/objects/PMC_SS_SNOW_SolutionWithEndPoint__mdt/PMC_SS_SNOW_SolutionWithEndPoint__mdt.object-meta.xml
<CustomObject>
    <label>PMC SS SNOW Solution With EndPoint</label>
    <pluralLabel>PMC SS SNOW Solution With EndPoint</pluralLabel>
</CustomObject>