force-app/main/default/objects/PMC_SS_SNOW_SolutionWithEndPoint__mdt/fields/PMC_SS_SNOW_SolutionEndPoint__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_SNOW_SolutionEndPoint__c</fullName>
    <label>Solution EndPoint</label>
    <length>255</length>
    <type>Text</type>
</CustomField>