force-app/main/default/objects/PMC_SS_SNOW_SolutionWithEndPoint__mdt/fields/PMC_SS_SNOW_TableName__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_SNOW_TableName__c</fullName>
    <label>Table Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>