force-app/main/default/objects/PMC_SS_SNOW_SolutionWithEndPoint__mdt/fields/PMC_SS_SNOW_TicketType__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_SNOW_TicketType__c</fullName>
    <label>Service Now Ticket Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer Credit Analysis</fullName>
                <default>true</default>
                <label>Customer Credit Analysis</label>
            </value>
            <value>
                <fullName>Release of Paid Contracts</fullName>
            </value>
            <value>
                <fullName>Perform Warranty</fullName>
            </value>
            <value>
                <fullName>Warranty Formalization</fullName>
            </value>
            <value>
                <fullName>Use of Credits, Return, Receipt of Discharge and Reports</fullName>
            </value>
            <value>
                <fullName>Collections Portal</fullName>
            </value>
            <value>
                <fullName>Circularization Letters – Clients</fullName>
            </value>
            <value>
                <fullName>Debit or Credit Notes</fullName>
            </value>
            <value>
                <fullName>SNOW CREDENTIALS</fullName>
            </value>
            <value>
                <fullName>Comments</fullName>
            </value>
            <value>
                <fullName>Service Now Ticket URL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>